--- a/src/app/features/game-board/game-table-page/zones/center-table-zone/center-table-zone.scss
+++ b/src/app/features/game-board/game-table-page/zones/center-table-zone/center-table-zone.scss
@@ -24,7 +24,6 @@
   flex-direction: column;
   justify-content: center;
   gap: 0.25rem;
-  overflow: hidden;
 }
 
 .card-rank,
